@@ -119,6 +119,9 @@
    - markus@cvs.openbsd.org 2002/01/10 12:38:26
      [nchan.c]
      remove dead code (skip drain)
+   - markus@cvs.openbsd.org 2002/01/10 12:47:59
+     [nchan.c]
+     more unused code (with channels.c:1.156)
 
 
 20020121
@@ -7267,4 +7270,4 @@
  - Wrote replacements for strlcpy and mkdtemp
  - Released 1.0pre1
 
-$Id: ChangeLog,v 1.1757 2002/01/22 12:22:20 djm Exp $
+$Id: ChangeLog,v 1.1758 2002/01/22 12:22:44 djm Exp $
